# qtcloud-collab-provider

./: README.md  pyproject.toml
src/: main.py
src/agents/: decision_maker.py
src/models/: decision.py
tests/agents/: test_decision_maker.py
tests/models/: test_decision.py
